--- a/Product.css
+++ b/Product.css
@@ -144,7 +144,12 @@ table {
     flex-wrap: wrap;
     justify-content: center;
 }
-
+.top-wrap{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 a {
     color: #3F5D45;
     text-decoration: none;
