--- a/Home.css
+++ b/Home.css
@@ -150,6 +150,12 @@ a {
     justify-content: center;
 }
 
+.top-wrap{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .header {
     max-width: 940px;
     width: 100%;
